--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-addons-update": "0.14.14",
     "@types/react-dom": "0.14.18",
     "@types/webpack-env": "1.13.1",
+    "office-ui-fabric-react": "2.34.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router-dom": "^5.1.2"
@@ -45,6 +46,7 @@
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
     "gulp": "~3.9.1",
-    "gulp-sequence": "1.0.0"
+    "gulp-sequence": "1.0.0",
+    "typescript": "^2.4.2"
   }
 }
